Fix the H.264 config detection code which lead to video playback errors.

The H264Parser class needs to be a member of the H264ConfigChangeDetector class. Currently we use a
new instance of the H264Parser class to detect stream configurations which causes errors because we fail
to map a PPS to its SPS etc. Maintaining the same instance of the parser alleviates this problem.

BUG=597725

Review URL: https://codereview.chromium.org/1842523002

Cr-Commit-Position: refs/heads/master@{#383577}